src/ui/snapshots/coxtop__ui__form_frame__tests__a_choice_field_and_a_body_field_each_render.snap
---
source: src/ui/form_frame.rs
assertion_line: 150
expression: screen
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌Literal───────────────────────────────────────────────────────┐        "
"        │   kind   beta  [alpha/beta/gamma]                            │        "
"        │ > notes  first line  (22 chars)                              │        "
"        │                                                              │        "
"        │ Tab next  Enter confirm  Esc cancel                          │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
