src/ui/snapshots/coxtop__ui__form_frame__tests__the_add_machine_form_empty.snap
---
source: src/ui/form_frame.rs
assertion_line: 122
expression: "draw(&crate::form_machine::form(), 80, 24)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌Add machine───────────────────────────────────────────────────┐        "
"        │ > name                                                       │        "
"        │   ssh                                                        │        "
"        │   capacity      1                                            │        "
"        │   capabilities                                               │        "
"        │                                                              │        "
"        │ Tab next  Enter confirm  Esc cancel                          │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
