src/ui/snapshots/coxtop__ui__form_frame__tests__the_add_machine_form_filled_with_an_error_line.snap
---
source: src/ui/form_frame.rs
assertion_line: 133
expression: "draw(&form, 80, 24)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ┌Add machine───────────────────────────────────────────────────┐        "
"        │   name          bad name                                     │        "
"        │ > ssh           pat@edge-1                                   │        "
"        │   capacity      1                                            │        "
"        │   capabilities                                               │        "
"        │ name must be non-empty with no whitespace                    │        "
"        │                                                              │        "
"        │ Tab next  Enter confirm  Esc cancel                          │        "
"        └──────────────────────────────────────────────────────────────┘        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
